2024-05-19T00:59:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9143886796 # 285
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-19
* notice: last 14d: unq all: 6 19
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 917 1666
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 917 1667
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-05-18]

2024-05-18T08:13:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9138488342 # 283
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
* notice: last 14d: unq all: 6 18
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 916 1665
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 917 1666
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-18]

2024-05-18T00:55:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9136012815 # 282
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
* notice: last 14d: unq all: 5 17
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 916 1664
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 916 1665
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-05-17]

2024-05-17T08:15:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9125119996 # 280