@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-19T00:59:41Z",
+  "timestamp" : "2024-05-19T08:14:14Z",
   "count_outdated" : 1648,
   "uniques_outdated" : 904,
-  "count" : 1667,
-  "uniques" : 917,
+  "count" : 1668,
+  "uniques" : 918,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
